[project]
name = "diode-measurement"
description = "IV/CV measurements for silicon sensors."
readme = "README.md"
authors = [{name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"}]
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.9"
dependencies = [
    "comet @ https://github.com/hephy-dd/comet/archive/refs/tags/v1.4.2.tar.gz",
    "PySide6~=6.10.2",
    "PyVISA~=1.14",
    "PyVISA-py~=0.7",
    "pint~=0.24",
    "json-rpc~=1.15",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hephy-dd/diode-measurement/"
Source = "https://github.com/hephy-dd/diode-measurement/"

[project.scripts]
diode-measurement = "diode_measurement.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["diode_measurement*"]

[tool.setuptools.dynamic]
version = {attr = "diode_measurement.__version__"}

[tool.setuptools.package-data]
"diode_measurement.assets.icons" = ["*.svg", "*.ico"]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["jsonrpc.*"]
ignore_missing_imports = true
