[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diode-measurement"
description = "IV/CV measurements for silicon sensors."
readme = "README.md"
license = {text = "GPLv3"}
keywords = []
authors = [
    {name = "Bernhard Arnold", email = "bernhard.arnold@oeaw.ac.at"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.9"
dependencies = [
    "comet @ https://github.com/hephy-dd/comet/archive/refs/tags/v1.4.2.tar.gz",
    "PySide6~=6.10.2",
    "PyVISA~=1.14",
    "PyVISA-py~=0.7",
    "json-rpc~=1.15",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hephy-dd/diode-measurement/"
Source = "https://github.com/hephy-dd/diode-measurement/"

[project.scripts]
diode-measurement = "diode_measurement.__main__:main"

[tool.hatch.version]
path = "src/diode_measurement/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "docs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "tox.ini",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["jsonrpc.*"]
ignore_missing_imports = true
